--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -21,5 +21,13 @@
   <% end %>
 </p>
 
+<p>
+  <% if @brewery.ratings.empty? %>
+      None of this brewery's beers have been rated!
+  <% else %>
+      Has <%= pluralize(@brewery.ratings.size, 'rating') %>, average <%= @brewery.average_rating %>
+  <% end %>
+</p>
+
 <%= link_to 'Edit', edit_brewery_path(@brewery) %> |
 <%= link_to 'Back', breweries_path %>
