--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,27 @@
     <%= link_to 'breweries', breweries_path %>
     <%= link_to 'beers', beers_path %>
     <%= link_to 'ratings', ratings_path %>
+    <%= link_to 'users', users_path %>
+    <%= ' | ' %>
+    <% if current_user %>
+      <%= link_to current_user.username, current_user %>
+      <%= link_to 'RateABeer!', new_rating_url %>
+      <%= link_to 'signout', signout_path, method: :delete%>
+    <% else %>
+        <%= link_to 'signin', signin_path %>
+        <%= link_to 'signup', new_user_url %>
+  <% end %>
+
+
   </div>
+
+  <% if current_user %>
+    <p><%= current_user.username %> signed in</p>
+  <% else %>
+    <p> visitor session </p>
+  <% end %>
+
+
 
   <%= yield %>
 
