--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,11 +15,20 @@
 
 <p>
   <% @user.ratings.each do |r| %>
-      <li> <%= r.to_s %> <%= link_to 'delete', r, method: :delete, data: { confirm: 'Are you sure?' } %> </li>
+      <li>
+        <%= r.to_s %> <%
+        if @user == current_user %>
+            <%= link_to 'delete', r, method: :delete, data: { confirm: 'Are you sure?' } %>
+        <% end %>
+      </li>
   <% end %>
 </p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
+<% if @user == current_user %>
+  <%= link_to 'Delete', @user, method: :delete, data: { confirm: 'Are you sure?' } %> |
+    <%= link_to 'Edit', edit_user_path(@user) %> |
+<% end %>
+
 <%= link_to 'Back', users_path %>
 
 
