--- a/app/views/memberships/new.html.erb
+++ b/app/views/memberships/new.html.erb
@@ -1,5 +1,18 @@
-<h1>New Membership</h1>
+<h2>Create new rating</h2>
 
-<%= render 'form' %>
+<%= form_for(@membership) do |f| %>
+    <% if @membership.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@rating.errors.count, "error") %> prohibited rating from being saved:</h2>
 
-<%= link_to 'Back', memberships_path %>
+          <ul>
+            <% @rating.errors.full_messages.each do |msg| %>
+                <li><%= msg %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
+
+    <%= f.select :beer_club_id, options_from_collection_for_select(@beer_clubs, :id, :name) %>
+    <%= f.hidden_field :user_id, :value => current_user.id %>    <%= f.submit %>
+<% end %>
