--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -10,6 +10,10 @@
   <% end %>
 </ul>
 
-<p>
-  <%= link_to 'New Rating', new_rating_path %>
-</p>
+<% if !current_user.nil? %>
+    <p>
+      <%= link_to 'New Rating', new_rating_path %>
+    </p>
+<% end %>
+
+
