--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -15,7 +15,7 @@
       <% @places.each do |place| %>
           <tr>
             <% Place.rendered_fields.each do |f| %>
-                <td><%= place.send(f) %></td>
+                <td><%= link_to place.send(f), "places/#{place.id}" %></td>
             <% end %>
           </tr>
       <% end %>
