--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -40,6 +40,15 @@
   </p>
 <% end %>
 
+<% if current_user && current_user.in_club(@beer_club) %>
+    <p>
+      <%= form_for(@membership, method: "delete") do |f| %>
+          <%= f.hidden_field :beer_club_id %>
+          <%= f.hidden_field :user_id, :value => current_user.id %>
+          <%= f.submit value: "end membership" %>
+      <% end %>
+    </p>
+<% end %>
 
 <%= link_to 'Edit', edit_beer_club_path(@beer_club) %> |
 <%= link_to 'Destroy', @beer_club, method: :delete, data: { confirm: 'Are you sure?' } %> |
