--- a/app/views/beer_clubs/index.html.erb
+++ b/app/views/beer_clubs/index.html.erb
@@ -4,27 +4,24 @@
 
 <table>
   <thead>
-    <tr>
-      <th>Name</th>
-      <th>Founded</th>
-      <th>City</th>
-      <th>Members</th>
-      <th colspan="3"></th>
-    </tr>
+  <tr>
+    <th>Name</th>
+    <th>Founded</th>
+    <th>City</th>
+  </tr>
   </thead>
 
   <tbody>
-    <% @beer_clubs.each do |beer_club| %>
+  <% @beer_clubs.each do |beer_club| %>
       <tr>
-        <td><%= link_to beer_club.name, beer_club %></td>
+        <td><%= link_to beer_club.name, beer_club  %></td>
         <td><%= beer_club.founded %></td>
         <td><%= beer_club.city %></td>
-        <td><%= beer_club.memberships.count%></td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
 </table>
 
 <br>
 
-<%= link_to 'New Beer club', new_beer_club_path %>
+<%= link_to 'New Beer club', new_beer_club_path if current_user %>
