--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
     <%= link_to 'users', users_path %>
     <%= link_to 'clubs', beer_clubs_path %>
     <%= link_to 'palces', places_path %>
+    <%= link_to 'styles', styles_path %>
     <%= ' | ' %>
     <% if current_user %>
         <%= link_to 'RateABeer!', new_rating_url %>
@@ -33,3 +34,5 @@
 
 </body>
 </html>
+
+
