--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,18 +1,7 @@
-<p id="notice"><%= notice %></p>
+<h2> <%= @place.name %> </h2>
 
+<p> <%= @place.street %></p>
 
-<h2><%= @place.name %></h2>
-<i><%= @place.status %></i>
+<p> <%= @place.zip %> <%= @place.city %> </p>
 
-<p>
-  <%= @place.street %> <br>
-  <%= @place.zip %> <br>
-  <%= @place.city %>, <%= @place.country %>
-</p>
-
-<p>
-  <%= link_to 'Back', places_path %>
-</p>
-
-
-
+<iframe src="<%= @place.url %>" width="600" height="400"></iframe>
