--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -12,7 +12,7 @@
 
 <% if !current_user.nil? %>
     <p>
-      <%= link_to 'New Rating', new_rating_path %>
+      <%= link_to 'New Rating', new_rating_path, class:'btn btn-default' %>
     </p>
 <% end %>
 
