--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -32,7 +32,7 @@
             <%= f.submit value:"join the club" %>
         <% end %>
     <% end %>
-
-    <%= link_to 'Edit', edit_beer_club_path(@beer_club) %>
-    <%= link_to 'Destroy', @beer_club, method: :delete, data: { confirm: 'Are you sure?' } %>
+    <br>
+    <%= link_to 'Edit', edit_beer_club_path(@beer_club), class:'btn btn-xs btn-warning' %>
+    <%= link_to 'Destroy', @beer_club, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-xs btn-danger' %>
 <% end %>
