--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,19 +1,109 @@
 
 
-<h2>List of ratings</h2>
+<h2>Rating statistics</h2>
 
 <p> Number of ratings: <%= @ratings.count %> </p>
 
-<ul>
-  <% @ratings.each do |rating| %>
-      <li> <%= rating.to_s %> <%= link_to rating.user.username, rating.user %> </li>
+
+<div class="container">
+  <div class="row">
+    <div class="col-lg-3">
+      <table class="table">
+        <thead>
+        <tr>
+          <th><h3>Best Beers</h3></th>
+          <th>Average</th>
+        </tr>
+        </thead>
+        <tbody>
+        <% @beers.each do |beer| %>
+            <tr>
+              <td><%= link_to beer.name, beer %></td>
+              <td><%= beer.average_rating %></td>
+            </tr>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="col-lg-4">
+      <table class="table">
+        <thead>
+        <tr>
+          <th><h3>Best Breweries</h3></th>
+          <th>Average</th>
+        </tr>
+        </thead>
+        <tbody>
+        <% @breweries.each do |brewery| %>
+            <tr>
+              <td><%= link_to brewery.name, brewery %></td>
+              <td><%= brewery.average_rating %></td>
+            </tr>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="col-lg-3">
+      <table class="table">
+        <thead>
+        <tr>
+          <th><h3>Best Styles</h3></th>
+          <th>Average</th>
+        </tr>
+        </thead>
+        <tbody>
+        <% @styles.each do |style| %>
+            <tr>
+              <td><%= link_to style.name, style %></td>
+              <td><%= style.average_rating %></td>
+            </tr>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
+
+  </div>
+</div>
+
+
+
+
+<table class="table">
+  <thead>
+  <tr>
+    <th><h3>Most active users</h3></th>
+    <th>Favorite beer</th>
+    <th>Favorite style</th>
+    <th>Favorite brewery</th>
+    <th>Ratings</th>
+  </tr>
+  </thead>
+  <tbody>
+  <% @raters.each do |rater| %>
+      <tr>
+        <td><%= link_to rater.username, rater %></td>
+        <td><%= link_to rater.favorite_beer.name, rater.favorite_beer %></td>
+        <td><%= link_to rater.favorite_style, rater.favorite_style %></td>
+        <td><%= link_to rater.favorite_brewery.name, rater.favorite_brewery %></td>
+        <td><%= rater.ratings.count %></td>
+      </tr>
   <% end %>
-</ul>
+  </tbody>
+</table>
+
+
+<p>
+  Recent ratings
+  <% @ratings.each do |rating| %>
+    <li> <%= rating.to_s %> <%= link_to rating.user.username, rating.user %> </li>
+  <% end %>
+</p>
+
 
 <% if !current_user.nil? %>
     <p>
       <%= link_to 'New Rating', new_rating_path, class:'btn btn-default' %>
     </p>
 <% end %>
-
-
