--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -3,7 +3,7 @@
 
 <h1>Styles</h1>
 
-<table>
+<table class="table">
   <thead>
   <tr>
     <th>Name</th>
@@ -20,3 +20,5 @@
   <% end %>
   </tbody>
 </table>
+
+
