--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -36,6 +36,7 @@
 
 
 
-    <%= link_to 'Edit', edit_beer_club_path(@beer_club), class:'btn btn-xs btn-warning' %>
-    <%= link_to 'Destroy', @beer_club, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-xs btn-danger' %>
+    <%= edit_and_destroy_buttons(@beer_club) %>
+
+
 <% end %>
