--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -29,8 +29,7 @@
         score: <%= f.number_field :score %>
         <%= f.submit %>
     <% end %>
-
-  <%= link_to 'Edit', edit_beer_path(@beer) %> |
-  <%= link_to 'Back', beers_path %>
-
 <% end %>
+
+<%= edit_and_destroy_buttons(@beer) %>
+<%= link_to 'Back', beers_path %>
