--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -7,9 +7,14 @@
   <% end %>
 </h2>
 
+
 <p>
   <strong>Year:</strong>
   <em> Established in <%= @brewery.year %></em>
+</p>
+
+<p>
+<%= link_to "change activity", toggle_activity_brewery_path(@brewery.id), method: :post, class: "btn btn-xs btn-default" %>
 </p>
 
 <p>
@@ -31,5 +36,5 @@
   <% end %>
 </p>
 
-<%= link_to 'Edit', edit_brewery_path(@brewery) %> |
+<%= edit_and_destroy_buttons(@brewery) %>
 <%= link_to 'Back', breweries_path %>
