--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Listing Users</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Username</th>
@@ -13,9 +13,10 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.username %></td>
-        <td><%= link_to 'Show', user %></td>
-
+        <td><%= link_to user.username, user %></td>
+        <% if not user.freedom %>
+            <td><span class="label label-info"> account frozen </span> </td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
