--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -14,7 +14,9 @@
 </p>
 
 <p>
-<%= link_to "change activity", toggle_activity_brewery_path(@brewery.id), method: :post, class: "btn btn-xs btn-default" %>
+  <% if current_user %>
+    <%= link_to "change activity", toggle_activity_brewery_path(@brewery.id), method: :post, class: "btn btn-xs btn-default" %>
+  <% end %>
 </p>
 
 <p>
