--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -21,8 +21,7 @@
         <td><%= link_to beer.name, beer %></td>
         <td><%= beer.style %></td>
         <td><%= link_to beer.brewery.name, beer.brewery%></td>
-        <td><%= link_to 'Edit', edit_beer_path(beer), class:'btn btn-xs btn-warning' %></td>
-        <td><%= link_to 'Destroy', beer, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-xs btn-danger' %></td>
+        <td> <%= edit_and_destroy_buttons(beer) %></td>
       </tr>
     <% end %>
   </tbody>
