--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -1,35 +1,38 @@
 <p id="notice"><%= notice %></p>
 
+<% cache @beer do %>
 
-<h2><%= @beer.name %></h2>
+  <h2><%= @beer.name %></h2>
 
-<p>
-  <strong>Style:</strong>
-  <%= @beer.style %>
-</p>
+  <p>
+    <strong>Style:</strong>
+    <%= @beer.style %>
+  </p>
 
-<p>
-  <strong>Brewery:</strong>
-  <%= @beer.brewery.name %>
-</p>
+  <p>
+    <strong>Brewery:</strong>
+    <%= @beer.brewery.name %>
+  </p>
 
-<p>
-  <% if @beer.ratings.empty? %>
-      beer has not yet been rated!
-  <% else %>
-      Beer has <%= pluralize(@beer.ratings.size, 'rating') %>, average <%= @beer.average_rating %>
-  <% end %>
-</p>
-
-<% if current_user %>
-    <h4>give a rating:</h4>
-
-    <%= form_for(@rating) do |f| %>
-        <%= f.hidden_field :beer_id %>
-        score: <%= f.number_field :score %>
-        <%= f.submit %>
+  <p>
+    <% if @beer.ratings.empty? %>
+        beer has not yet been rated!
+    <% else %>
+        Beer has <%= pluralize(@beer.ratings.size, 'rating') %>, average <%= @beer.average_rating %>
     <% end %>
-<% end %>
+  </p>
+
+  <% if current_user %>
+      <h4>give a rating:</h4>
+
+      <%= form_for(@rating) do |f| %>
+          <%= f.hidden_field :beer_id %>
+          score: <%= f.number_field :score %>
+          <%= f.submit %>
+      <% end %>
+  <% end %>
+
+<%end%>
 
 <%= edit_and_destroy_buttons(@beer) %>
 <%= link_to 'Back', beers_path %>
