--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -1,42 +1,46 @@
 <p id="notice"><%= notice %></p>
 
-<h2>
-  <%= @brewery.name %>
-  <% if not @brewery.active  %>
-      <span class="label label-info">retired</span>
-  <% end %>
-</h2>
+<% cache @brewery do %>
+
+  <h2>
+    <%= @brewery.name %>
+    <% if not @brewery.active  %>
+        <span class="label label-info">retired</span>
+    <% end %>
+  </h2>
 
 
-<p>
-  <strong>Year:</strong>
-  <em> Established in <%= @brewery.year %></em>
-</p>
+  <p>
+    <strong>Year:</strong>
+    <em> Established in <%= @brewery.year %></em>
+  </p>
 
-<p>
-  <% if current_user %>
-    <%= link_to "change activity", toggle_activity_brewery_path(@brewery.id), method: :post, class: "btn btn-xs btn-default" %>
-  <% end %>
-</p>
+  <p>
+    <% if current_user %>
+      <%= link_to "change activity", toggle_activity_brewery_path(@brewery.id), method: :post, class: "btn btn-xs btn-default" %>
+    <% end %>
+  </p>
 
-<p>
-  Oluiden määrä:
-  <%= @brewery.beers.count %>
-</p>
+  <p>
+    Oluiden määrä:
+    <%= @brewery.beers.count %>
+  </p>
 
-<p>
-  <% @brewery.beers.each do |beer| %>
-      <%= link_to beer.name, beer %>
-  <% end %>
-</p>
+  <p>
+    <% @brewery.beers.each do |beer| %>
+        <%= link_to beer.name, beer %>
+    <% end %>
+  </p>
 
-<p>
-  <% if @brewery.ratings.empty? %>
-      None of this brewery's beers have been rated!
-  <% else %>
-      Has <%= pluralize(@brewery.ratings.size, 'rating') %>, average <%= @brewery.average_rating %>
-  <% end %>
-</p>
+  <p>
+    <% if @brewery.ratings.empty? %>
+        None of this brewery's beers have been rated!
+    <% else %>
+        Has <%= pluralize(@brewery.ratings.size, 'rating') %>, average <%= @brewery.average_rating %>
+    <% end %>
+  </p>
+
+<% end %>
 
 <%= edit_and_destroy_buttons(@brewery) %>
 <%= link_to 'Back', breweries_path %>
